Add hasVerifiedContract to responses, remove error sigs, change queries
